# ask_and_answer

./: .gitignore  README.md  pyproject.toml  test_embedding.py  test_llm_agent.py
product_agent_streamlit/: README.md  app.py  catalog_agent.py  config.py  mai_app.py  main.py  multi_catalog_system.py  orchestrator_agent.py  product_agent.py  requirements.txt  setup.bat  streamlit_app.py
product_agent_streamlit/adapters/: __init__.py  gemini_model.py
product_agent_streamlit/agents/: __init__.py  catalog_agent.py  orchestrator_agent.py
product_agent_streamlit/config/: __init__.py  settings.py
product_agent_streamlit/core/: __init__.py  multi_catalog_system.py
product_agent_streamlit/custom_agents/: __init__.py  catalog_agent.py  orchestrator_agent.py
product_agent_streamlit/models/: __init__.py  catalog_models.py  pdf_metadata.py
product_agent_streamlit/processors/: __init__.py  catalog_manager.py  pdf_processor.py
product_agent_streamlit/repositories/: __init__.py  catalog_repository.py
product_agent_streamlit/services/: __init__.py  agent_service.py  catalog_service.py  gemini_agent_service.py  gemini_service.py  improved_agent_service.py  openai_agent_service.py
product_agent_streamlit/storage/: __init__.py  catalog_library.py
product_agent_streamlit/system/: __init__.py  multi_catalog_system.py
product_agent_streamlit/tools/: __init__.py  catalog_tools.py  orchestrator_tool.py  orchestrator_tools.py
product_agent_streamlit/ui/: __init__.py  (+1 more)
src/: embeddings.py  gradio.py  instructions.md  pdf_processor.py  prompts.py  retrieve_docs.py
(+10 files in other folders)
